YAML-STANDARD/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: default
spec:
  selector:
    matchLabels:
      app: fastapi
  replicas: 3
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: fastapi-app:latest
          imagePullPolicy : Never
          ports:
            - containerPort: 5000
          resources:
           requests:
            memory: "128Mi"
            cpu: "100m"
           limits:
            memory: "256Mi"
            cpu: "500m"
