YAML-STANDARD/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: exam.mariam.abrdns.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: fastapi-service
              port:
                number: 5000
